--- a/worker/index.html
+++ b/worker/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>ArcToCore BPMN</title>
+    <title>BPMN</title>
     <link rel="stylesheet" href="vendor/bpmn-js/assets/diagram-js.css" />
     <link rel="stylesheet" href="vendor/bpmn-js/assets/bpmn-font/css/bpmn-embedded.css" />
     <link rel="stylesheet" href="vendor/bpmn-js/assets/bpmn-font/css/bpmn.css" />
@@ -9,18 +9,9 @@
     <link rel="stylesheet" href="vendor/w3-css/3/w3.css" />
     <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.css" />
     <link rel="stylesheet" href="css/app.css" />
-    <link rel="shortcut icon" href="arc80x80.png" type="image/x-icon">
+    <link rel="shortcut icon" href="logo80x80.png" type="image/x-icon">
 
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-LJ877RPTRJ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-LJ877RPTRJ');
-</script>
-
-
+ 
 </head>
 <body>
 
