--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@ Produce video clips.">
   
   
   <title>SportTacTic</title>
-  <link rel="stylesheet" href="assets/font-awesome-brands/../css/fontawesome.min.css">
-  <link rel="stylesheet" href="assets/font-awesome-brands/css/brands.min.css">
   <link rel="stylesheet" href="assets/font-awesome-solid/../css/fontawesome.min.css">
   <link rel="stylesheet" href="assets/font-awesome-solid/css/solid.min.css">
+  <link rel="stylesheet" href="assets/font-awesome-brands/../css/fontawesome.min.css">
+  <link rel="stylesheet" href="assets/font-awesome-brands/css/brands.min.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
@@ -123,7 +123,7 @@ Produce video clips.">
             <div class="card col-12 col-md-4 col-lg-2 p-3">
                 <div class="card-wrapper">
                     <div class="card-box align-center">
-                        <a href="/desktopvideoappfree/v14/" target="_blank"><span class="mbr-iconfont mbrib-video" style=""></span></a>
+                        <a href="https://sporttactic.net/desktopvideoappfree/v14/" target="_blank"><span class="mbr-iconfont mbrib-video" style=""></span></a>
                         <h4 class="card-title align-center mbr-black mbr-fonts-style display-7"><strong>Desktop Video webapp V1.4</strong></h4>
                     </div>
                 </div>
@@ -131,7 +131,7 @@ Produce video clips.">
             <div class="card p-3 col-12 col-md-4 col-lg-2">
                 <div class="card-wrapper">
                     <div class="card-box align-center">
-                        <a href="https://sporttactic.github.io/desktopappfree/v39/" target="_blank"><span class="mbr-iconfont mbri-desktop" style=""></span></a>
+                        <a href="https://sporttactic.net/desktopappfree/v39/" target="_blank"><span class="mbr-iconfont mbri-desktop" style=""></span></a>
                         <h4 class="card-title align-center mbr-black mbr-fonts-style display-7"><strong>Desktop webapp&nbsp;</strong><br><strong>V3.9</strong></h4>
                     </div>
                 </div>
@@ -616,7 +616,7 @@ document.addEventListener("DOMContentLoaded", function() {
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/t" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Made with Mobirise <a href="https://mobirise.site/j" style="color:#aaa;">web page</a> creator</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/y" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/s" style="color:#aaa;">Website</a> was designed with Mobirise website template</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9180858051840976"
      crossorigin="anonymous"></script>
   
