--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ Produce video clips.">
                     <p class="mbr-text mbr-fonts-style display-7">Draw and animate play sequences 
 <br>Tactical video analysis 
 <br>Show focus areas 
-<br>Produce video clips.<br><br>Can be used in offline mode in browser when network is unavailable.<br><strong><br></strong></p>
+<br>Produce video clips.&nbsp;<br><br>Apps can be used in offline mode in browser when network is unavailable.<br><strong><br></strong></p>
                     
                 </div>
             </div>
