--- a/Hints.html
+++ b/Hints.html
@@ -19,10 +19,10 @@ Produce video clips.">
   
   
   <title>Hints</title>
-  <link rel="stylesheet" href="assets/font-awesome-brands/../css/fontawesome.min.css">
-  <link rel="stylesheet" href="assets/font-awesome-brands/css/brands.min.css">
   <link rel="stylesheet" href="assets/font-awesome-solid/../css/fontawesome.min.css">
   <link rel="stylesheet" href="assets/font-awesome-solid/css/solid.min.css">
+  <link rel="stylesheet" href="assets/font-awesome-brands/../css/fontawesome.min.css">
+  <link rel="stylesheet" href="assets/font-awesome-brands/css/brands.min.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons-bold/mobirise-icons-bold.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -397,7 +397,7 @@ Produce video clips.">
     </div>
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-1o" data-rv-view="379">
+<section class="mbr-section" id="witsec-modal-window-block-1o" data-rv-view="421">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -470,7 +470,7 @@ document.addEventListener("DOMContentLoaded", function() {
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-9m" data-rv-view="380">
+<section class="mbr-section" id="witsec-modal-window-block-9m" data-rv-view="422">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -543,7 +543,7 @@ document.addEventListener("DOMContentLoaded", function() {
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-1p" data-rv-view="381">
+<section class="mbr-section" id="witsec-modal-window-block-1p" data-rv-view="423">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -618,7 +618,7 @@ document.addEventListener("DOMContentLoaded", function() {
 
 </section>
 
-<section class="mbr-section" id="witsec-modal-window-block-8e" data-rv-view="382">
+<section class="mbr-section" id="witsec-modal-window-block-8e" data-rv-view="424">
 
 	<style>
 	/* Let's not animate the contents of modal windows */
@@ -706,7 +706,7 @@ document.addEventListener("DOMContentLoaded", function() {
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/b" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/c" style="color:#aaa;">The</a> web page was built with Mobirise</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/m" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Built with Mobirise <a href="https://mobirise.site/j" style="color:#aaa;">web page</a> builder</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9180858051840976"
      crossorigin="anonymous"></script>
   
