--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ Produce video clips.">
             </div>
             <div class="col-12 col-md">
                 <div class="text-wrapper text-center">
-                    <h1 class="mbr-section-title mbr-fonts-style mb-3 display-2"><strong>Tactical board and video analysis</strong></h1>
+                    <h1 class="mbr-section-title mbr-fonts-style mb-3 display-2"><strong>Tactical board for soccer,basketball,volleyball and handball.</strong><strong><br></strong><br><strong>Video analysis used for all sports.</strong></h1>
                     <p class="mbr-text mbr-fonts-style display-7">Draw and animate play sequences 
 <br>Tactical video analysis 
 <br>Show focus areas 
@@ -123,7 +123,7 @@ Produce video clips.">
                 <div class="card-wrapper">
                     <div class="card-box align-center">
                         <a href="https://sporttactic.net/desktopvideoappfree/v16/" target="_blank"><span class="mbr-iconfont mbrib-video" style=""></span></a>
-                        <h4 class="card-title align-center mbr-black mbr-fonts-style display-7"><strong>Desktop Video webapp V1.6</strong></h4>
+                        <h4 class="card-title align-center mbr-black mbr-fonts-style display-7"><strong>Desktop Video webapp V1.6</strong><br><strong>Used for all sports</strong></h4>
                     </div>
                 </div>
             </div>
